                and '-I'.
	      - There is only a single "pass as-is to iptables"
                argument (so you must quote that part).

           Example:

	      log_rule_limit
	          'info' , 
	          $chainref , 
	          $chainref->{name},
	          'DROP' , 
	          '',    #Limit
	          '' ,   #Log tag
	          'add';	      

    f) The 'refresh' command is now synonymous with 'restart'.

    g) Some run-time scripts will need to be changed to write their
       iptables commands to file descriptor 3 in iptables-restore
       format rather than running those commands.

	    maclog

       Details to follow.

       Some run-time scripts are simply eliminated because they no
       longer make any sense under Shorewall-perl:

	initdone  - The these two scripts assumed a model where the
	continue    chains were built in parallel. In the
		    iptables-restore model, chains are built serially
		    within tables and tables are build serially.  

	refresh   - The 'refresh' command is the same as 'restart'
	refreshed

    h) The /etc/shorewall/tos file now has zone-independent SOURCE and
       DEST columns as do all other files except the rules and policy
       files.

       The SOURCE column may be one of the following:

           [all:]<address>[,...]
           [all:]<interface>[:<address>[,...]]
           $FW[:<address>[,...]]

       The DEST column may be one of the following:
       
           [all:]<address>[,...]
           [all:]<interface>[:<address>[,...]]

       This is a permanent change. The old zone-based rules have never
       worked right and this is a good time to replace them. I've tried
       to make the new syntax cover the most common cases without
       requiring change to existing files. In particular, it will
       handle the tos file released with Shorewall 1.4 and earlier.

    i) Shorewall is now out of the ipset load/reload business. With