@@ -1319,7 +1319,11 @@ gateway:~ #</programlisting>
           specified, the saved configuration specified by the RESTOREFILE
           option in <ulink
           url="Documentation.htm#Conf">/etc/shorewall/shorewall.conf</ulink>
-          will be restored if that saved configuration exists</para>
+          will be restored if that saved configuration exists. When <emphasis
+          role="bold">-f</emphasis> is given, a
+          <replaceable>&lt;configuration-directory&gt;</replaceable> may not
+          be specified. The <emphasis role="bold">-f</emphasis> option is not
+          available with shorewall-lite.</para>
         </listitem>
       </varlistentry>
 
