@@ -1117,13 +1117,15 @@
           <para>Start shorewall. Existing connections through shorewall
           managed interfaces are untouched. New connections will be allowed
           only if they are allowed by the firewall rules or policies. If a
-          <emphasis>directory</emphasis> is included in the command, Shorewall
-          will look in that <emphasis>directory</emphasis> first for
+          <replaceable>directory</replaceable> is included in the command,
+          Shorewall will look in that <emphasis>directory</emphasis> first for
           configuration files.If <emphasis role="bold">-f</emphasis> is
           specified, the saved configuration specified by the RESTOREFILE
           option in <ulink url="shorewall.conf.html">shorewall.conf</ulink>(5)
           will be restored if that saved configuration exists and has been
-          modified more recently than the files in /etc/shorewall.</para>
+          modified more recently than the files in /etc/shorewall. When
+          <emphasis role="bold">-f</emphasis> is given, a
+          <replaceable>directory</replaceable> may not be specified.</para>
 
           <para>The <option>-C</option> option determines the compiler to use
           (Shorewall-shell or Shorewall-perl). If not specified, the
